Setup: Adds NGRX

--- a/angular.json
+++ b/angular.json
@@ -137,5 +137,8 @@
       }
     }
   },
-  "defaultProject": "squad-webclient"
+  "defaultProject": "squad-webclient",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
